@startuml Entity Relationship

entity Todo {
  * id: ObjectID <<generated>>
  --
  assignedTo: ObjectID
  * projectId: ObjectID
  * createdBy: ObjectID
  parentId: ObjectID
  --
  * title: string
  description: string
  isCompleted: boolean
}

entity Project {
  * id: ObjectID <<generated>>
  --
  * title: string
  description: string
  isCompleted: boolean
}

entity User {
  * id: ObjectID <<generated>>
  --
  * name: string
  phoneNumber: string
  *email: string
  * password: string
  isActive: boolean
  lastSignInAt: Date
}

entity ProjectUser {
  * id: ObjectID <<generated>>
  --
  * projectId: ObjectID
  * userId: ObjectID
  --
  role: ERole
  ' enum ERole {
  '   ADMIN = 'admin',
  '   USER = 'user'
  ' }
}

Project ||--o{ ProjectUser
Project ||--o{ Todo
ProjectUser }o--|| User
User ||--o{ Todo
Todo ||--o{ Todo

@enduml
